src/main/resources/resources/colorAdminTheme.css
/* ... */
.nav-stacked>li+li{
    margin-top: 0px;
    margin-left: 0;
}

body .form-cell .grid table.tablesaw, body .subform-cell .grid table.tablesaw {
    border-bottom: 0px solid #999 !important;
}

.form-cell .tablesaw-stack tbody tr, .subform-cell .tablesaw-stack tbody tr{
    border-top: 1px solid #e4dede;
}

.dataList th a, th a:visited {
    background-color: transparent !important;
    border-bottom: 0px solid !important;
    box-shadow: 0px 0px 0px !important;
}
/* CalendarMenu */
.calendar_menu_body{
    padding: 0 20px !important;
}

.fc-scroller{
    overflow: hidden !important;
}

.fc-unthemed td{
    border-color: #d4d4d4 !important;
    background: white;
}

.fc-ltr .fc-basic-view .fc-day-number {
    font-size: 16px;
    font-weight: 100;
    color: inherit;
}

.fc-toolbar h2 {
    font-size: 2.5em;
}

.fc-unthemed .fc-today {
    background: #ddf1fd !important;
}

.fc button {
    font-size: 1.4rem;
    font-weight: 500;
    border-radius: 0px;
    border: 1.5px solid;
    background-image: none;
    box-shadow: 0 1px 1px rgb(255 255 255);
}

.fc td, .fc th{
    border-bottom-width: 2px !important;
    font-weight: 500;
}

.fc-day-grid-event .fc-time{
    font-weight: 500 !important;
}

.fc-state-default.fc-corner-right, .fc-state-default.fc-corner-right:hover{
    border-top-right-radius: 3px !important;
    border-bottom-right-radius: 3px !important;
    border-left: 1px solid #0c7cd5;
    border-top: 0px solid;
    border-right: 0px solid;
    border-bottom: 0px solid;
    margin-top: 0px;
}

.fc-state-default.fc-corner-left, .fc-state-default.fc-corner-left:hover{
    border-top-left-radius: 3px !important;
    border-bottom-left-radius: 3px !important;
    border-right: 1px solid #0c7cd5;
    border-top: 0px solid;
    border-left: 0px solid;
    border-bottom: 0px solid;
}

.fc-event{
    font-weight: 500 !important;
    line-height: 1.5 !important;
    border-radius: 0px !important;
}

#content > main > div.calendar_menu_body > h3{
    font-size: 28px;
    margin: 0 0 20px;
    padding: 0 0 15px 0;
    border: none;
    line-height: 32px;
    font-weight: 300;
    border-bottom: 1px solid rgba(0,0,0,.1);
}


/* HTMLMEnu */

.ui-html{
    padding: 20px !important;
    background: white !important;
    box-shadow: 0 2px 10px rgba(0,0,0,.15);
}

.chart-body-content{
    background: white !important;
    box-shadow: 0 2px 10px rgba(0,0,0,.15);
    min-height: 100px;
    overflow: hidden;
}

#chart_container{
    margin: 20px;
    padding-left: 0;
    padding-right: 0;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

#content > main > div.chart-body-content > h1,
#content > main > div.chart-body-content > h2,
#content > main > div.chart-body-content > h3 {
    font-size: 20px;
    margin: 0;
    color: white;
    background: #0e0e0e;
    border-radius: 3px 3px 0 0;
    padding: 15px 10px;
}

.grid-stack-item-header{
    backgroud-color: #5d9cec !important;
}

.badge{
    border-radius: 3px;
    font-weight: 500;
    max-width: 20%;
}

.menu-container > li > a > span:nth-child(1) {
    float: left;
    max-width: 80%;
    white-space: normal;
}

body .grid-stack-item .grid-stack-item-content {
   background: white;
   box-shadow: 0 2px 10px rgba(0,0,0,.15);
}

.embeded .hasAnalyzer{
    padding-left: 5px;
    padding-right: 5px;
}

body:not(#login).embeded #content > main > div:not(.quickEdit), body:not(#login).embeded #content > main > table{
    border: 0px solid;
    box-shadow: 0 2px 10px transparent;
}

.reset_position{
    margin: 0 12px 5px !important;
}

.ps_progress_container .progress_bar{
    border: 1px solid #eee;
    border-radius: 10px;
    height: 15px !important;
}

.ps_progress_container .progress_bar .bar{
    border: 0px solid;
    border-radius: 60px;
    background: #37bc9b !important;
    background-size: 2rem 2rem !important;
    background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent)!important;
}

.user-menu{
  background-repeat: no-repeat;
}

#navigation > ul.user-menu.nav.nav-tabs.nav-stacked.main-menu > li > a > span{
    font-weight: 500;
}

#navigation > ul.user-menu.nav.nav-tabs.nav-stacked.main-menu > li > ul > li > a{
    padding-left: 16px;
}

#navigation > ul.user-menu.nav.nav-tabs.nav-stacked.main-menu > li > ul{
    background: rgba(0,0,0,.25);
    font-size: 13px;
}

#navigation > ul.user-menu.nav.nav-tabs.nav-stacked.main-menu > li > ul > li:nth-child(2) > a > span > .fa-power-off:before {
    padding-right: 3px;
}

#navigation > ul.user-menu.nav.nav-tabs.nav-stacked.main-menu > li > ul > li:nth-child(1) > a > span > .fa-user:before {
    padding-right: 5px;
}

span.pagelinks > a:hover{
    background-color: #e9ecef !important;
}

body .grid-action-edit:hover, body .grid-action-delete:hover, body .grid-action-add:hover{
     opacity:0.7;
}

.echart_menu_body{
    background: white !important;
    margin: -20px 0 !important;
    border-left: 1px solid #cfd8dc;
    border-bottom: 1px solid #cfd8dc;
    border-right: 1px solid #cfd8dc;
}

.datalist-body-content{
    border-left: 1px solid #cfd8dc;
    border-right: 1px solid #cfd8dc;
    border-top: 3px solid #cfd8dc;
}

span.pagelinks > a:nth-child(1){
    border-left: 1px solid #dee2e6;
}

/* popup */
main .dataList th, main .dataList td {
    border-top: 1px solid #e4dede;
    padding: 15px !important;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    text-align: left;
}
main.rtl .dataList th, main.rtl .dataList td {
    text-align: right;
}

main .dataList td.select_checkbox, main .dataList td.select_radio {
    padding: 8px 15px !important;
}

main .dataList td.footable-row-detail-cell {
    padding-top: 0!important;
    border-top: 0px;
}

main .dataList th{
    text-transform: uppercase;
}

main .dataList th.sorted {
    background-color: transparent;
}
/* ... */

